test/ScanDependencies/clang_scan_error.code
// REQUIRES: objc_interop
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %target-language-frontend -scan-dependencies -module-name Test %t/main.code -import-objc-header %t/bridging.h \
// RUN:   -disable-implicit-string-processing-module-import -disable-implicit-concurrency-module-import -parse-stdlib \
// RUN:   -o %t/deps.json -I %t -language-version 5 2>&1 | %FileCheck %s

// CHECK: error: bridging header dependency scanning failure: {{.*}}bridging.h:1:10: fatal error: 'do-not-exist.h' file not found

//--- bridging.h
#include "do-not-exist.h"

//--- main.code
fn test() {}
